--- a/analysis/methylation_analysis.Rmd
+++ b/analysis/methylation_analysis.Rmd
@@ -438,7 +438,7 @@ finemap_res_multi <- anno_finemap_res(finemap_res_multi,
 ```
 
 #### BRD7
-```{r echo=FALSE, message=FALSE, results='hide', warning=FALSE}
+```{r echo=FALSE, message=FALSE, results='hide', warning=FALSE, fig.width=15, fig.height=20}
 #finemap_res_multi[!is.na(finemap_res_multi$gene_name) & finemap_res_multi$gene_name == "ETS1", ]
 #pdf(file = "/project/xinhe/shengqian/TNFSF15.pdf",width = 12,height = 10)#
 make_locusplot(finemap_res_multi,
@@ -450,12 +450,12 @@ make_locusplot(finemap_res_multi,
                filter_cs = TRUE,
                color_pval_by = "cs",
                color_pip_by = "cs",
-               panel.heights = c(4, 4, 1, 2)
+               panel.heights = c(4, 4, 1, 4)
                )
 ```
 
 #### TNFSF15
-```{r echo=FALSE, message=FALSE, results='hide', warning=FALSE}
+```{r echo=FALSE, message=FALSE, results='hide', warning=FALSE, fig.width=15, fig.height=20}
 #finemap_res_multi[!is.na(finemap_res_multi$gene_name) & finemap_res_multi$gene_name == "ETS1", ]
 #pdf(file = "/project/xinhe/shengqian/TNFSF15.pdf",width = 12,height = 10)#
 make_locusplot(finemap_res_multi,
@@ -467,11 +467,11 @@ make_locusplot(finemap_res_multi,
                filter_cs = TRUE,
                color_pval_by = "cs",
                color_pip_by = "cs",
-               panel.heights = c(4, 4, 1, 2))
+               panel.heights = c(4, 4, 1, 4))
 ```
 
 #### ATG16L1
-```{r, echo=FALSE, message=FALSE, results='hide', warning=FALSE}
+```{r, echo=FALSE, message=FALSE, results='hide', warning=FALSE, fig.width=15, fig.height=20}
 #pdf(file = "/project/xinhe/shengqian/ATG16L1.pdf",width = 12,height = 10)
 make_locusplot(finemap_res_multi,
                region_id = "2_232685293_234242343",
@@ -482,7 +482,7 @@ make_locusplot(finemap_res_multi,
                filter_cs = TRUE,
                color_pval_by = "cs",
                color_pip_by = "cs",
-               panel.heights = c(4, 4, 1, 2))
+               panel.heights = c(4, 4, 1, 4))
 ```
 
 ### Adding meQTL to eQTL identifies an additional 11 high PIP genes
@@ -508,7 +508,7 @@ setdiff(set2,set1)
 
 #### ETS1
 Supporting a possible role for Ets1 in inflammatory syndromes of the gut is the identification of SNPs in the human ETS1 gene locus as a susceptibility alleles for celiac disease. https://pmc.ncbi.nlm.nih.gov/articles/PMC10842644/
-```{r, echo=FALSE, message=FALSE, results='hide', warning=FALSE}
+```{r, echo=FALSE, message=FALSE, results='hide', warning=FALSE, fig.width=15, fig.height=20}
 #pdf(file = "/project/xinhe/shengqian/TNFSF15.pdf",width = 12,height = 10)
 make_locusplot(finemap_res_multi,
                region_id = "11_128318642_130472680",
@@ -519,14 +519,14 @@ make_locusplot(finemap_res_multi,
                filter_cs = TRUE,
                color_pval_by = "cs",
                color_pip_by = "cs",
-               panel.heights = c(4, 4, 1, 2))
+               panel.heights = c(4, 4, 1, 4))
 ```
 
 #### RGS14
 Examples conserved between the mouse and human DNMT3A-deficient state comprise RGS14 (Regulator of G-protein signaling 14) and IFITM3 (Interferon-induced transmembrane protein 3), which showed a canonically increased expression with reduced methylation in the promoter region (https://www.nature.com/articles/s41467-022-33844-2#MOESM1)
 
 Colocalization analysis revealed eight candidate genetic variants and risk genes (including LINC00824, CDKAL1, IL10, IL23R, DNAJC27, LPP, RUNX3, and RGS14) associated with a shared genetic basis. Among these, IL23R, DNAJC27, LPP, and RGS14 were further validated by MVMR analysis. (https://www.tandfonline.com/doi/full/10.1080/07853890.2023.2281658#abstract)
-```{r, echo=FALSE, message=FALSE, results='hide', warning=FALSE}
+```{r, echo=FALSE, message=FALSE, results='hide', warning=FALSE, fig.width=15, fig.height=20}
 #pdf(file = "/project/xinhe/shengqian/ATG16L1.pdf",width = 12,height = 10)
 make_locusplot(finemap_res_multi,
                region_id = "5_176023592_177824506",
@@ -537,12 +537,12 @@ make_locusplot(finemap_res_multi,
                filter_cs = TRUE,
                color_pval_by = "cs",
                color_pip_by = "cs",
-               panel.heights = c(4, 4, 1, 2))
+               panel.heights = c(4, 4, 1, 4))
 ```
 
 #### SEC16A
 Both patients harboured other potentially damaging mutations in the GSDMB, ERAP2 and SEC16A genes.(https://pubmed.ncbi.nlm.nih.gov/22543157/)
-```{r, echo=FALSE, message=FALSE, results='hide', warning=FALSE}
+```{r, echo=FALSE, message=FALSE, results='hide', warning=FALSE, fig.width=15, fig.height=20}
 #pdf(file = "/project/xinhe/shengqian/ATG16L1.pdf",width = 12,height = 10)
 make_locusplot(finemap_res_multi,
                region_id = "9_136047132_136605890",
@@ -553,11 +553,11 @@ make_locusplot(finemap_res_multi,
                filter_cs = TRUE,
                color_pval_by = "cs",
                color_pip_by = "cs",
-               panel.heights = c(4, 4, 1, 2))
+               panel.heights = c(4, 4, 1, 4))
 ```
 
 #### HLA_DRA
-```{r, echo=FALSE, message=FALSE, results='hide', warning=FALSE}
+```{r, echo=FALSE, message=FALSE, results='hide', warning=FALSE, fig.width=15, fig.height=20}
 #pdf(file = "/project/xinhe/shengqian/HLA_DRA.pdf",width = 12,height = 10)
 #finemap_res_multi[finemap_res_multi$gene_name=="TNFSF15",]
 make_locusplot(finemap_res_multi,
@@ -569,11 +569,11 @@ make_locusplot(finemap_res_multi,
                filter_cs = TRUE,
                color_pval_by = "cs",
                color_pip_by = "cs",
-               panel.heights = c(4, 4, 1, 2))
+               panel.heights = c(4, 4, 1, 4))
 ```
 
 #### ADCY3
-```{r, echo=FALSE, message=FALSE, results='hide', warning=FALSE}
+```{r, echo=FALSE, message=FALSE, results='hide', warning=FALSE, fig.width=15, fig.height=20}
 #pdf(file = "/project/xinhe/shengqian/ATG16L1.pdf",width = 12,height = 10)
 #finemap_res_multi[finemap_res_multi$gene_name=="TNFSF15",]
 make_locusplot(finemap_res_multi,
@@ -585,7 +585,7 @@ make_locusplot(finemap_res_multi,
                filter_cs = TRUE,
                color_pval_by = "cs",
                color_pip_by = "cs",
-               panel.heights = c(4, 4, 1, 2))
+               panel.heights = c(4, 4, 1, 4))
 ```
 
 
