--- a/analysis/simulation_summary.Rmd
+++ b/analysis/simulation_summary.Rmd
@@ -500,7 +500,7 @@ for(i in 1:5){
                    get_top_genes_coloc(colocfs3[i],"expressionAdipose_Subcutaneous"),get_top_genes_coloc(colocfs4[i],"splicing_Adipose_Subcutaneous"),
                    get_top_genes_coloc(colocfs5[i],"expression_Lung"),get_top_genes_coloc(colocfs6[i],"splicing_Lung"))
   
-  coloc_genes <- unique(sapply(coloc_genes, function(x){unlist(strsplit(x, "[|]"))[1]}))
+  #coloc_genes <- unique(sapply(coloc_genes, function(x){unlist(strsplit(x, "[|]"))[1]}))
   
   plot_df <- rbind(plot_df,
                    data.frame(simutag=i,
