--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -18,6 +18,8 @@ editor_options:
 # Simulation results
   * [Simulation results](simulation_summary.html)
 
+# Real data coloc analysis
+  * [coloc results](real_data_coloc.html)
 
 # Methylation analysis results
   * [Methylation_analysis results](methylation_analysis.html)
