--- a/analysis/real_data_coloc.Rmd
+++ b/analysis/real_data_coloc.Rmd
@@ -34,7 +34,7 @@ get_top_genes_coloc <- function(colocf){
 }
 ```
 
-#### LDL
+### LDL
 ```{r echo=FALSE, message=FALSE, results='hide', warning=FALSE}
 finemap_res <- readRDS("/project/xinhe/xsun/multi_group_ctwas/11.multi_group_1008/results/LDL-ukb-d-30780_irnt/LDL-ukb-d-30780_irnt.ctwas.res.RDS")
 z_gene <- finemap_res$z_gene
@@ -67,10 +67,10 @@ num_ctwas <- dim(finemap_res[(finemap_res$susie_pip>0.8) & (finemap_res$type!="S
 num_coloc <- length(coloc_genes)
 plot_data <- c(num_coloc,num_ctwas)
 names(plot_data) <- c("coloc","multi-cTWAS")
-barplot(plot_data,col = c("#ffff99","#fb8072"))
+barplot(plot_data,col = c("#ffff99","#fb8072"),width = 1)
 ```
 
-#### SBP
+### SBP
 ```{r echo=FALSE, message=FALSE, results='hide', warning=FALSE}
 finemap_res <- readRDS("/project/xinhe/xsun/multi_group_ctwas/11.multi_group_1008/results/SBP-ukb-a-360/SBP-ukb-a-360.ctwas.res.RDS")
 z_gene <- finemap_res$z_gene
@@ -102,11 +102,11 @@ num_ctwas <- dim(finemap_res[(finemap_res$susie_pip>0.8) & (finemap_res$type!="S
 num_coloc <- length(coloc_genes)
 plot_data <- c(num_coloc,num_ctwas)
 names(plot_data) <- c("coloc","multi-cTWAS")
-barplot(plot_data,col = c("#ffff99","#fb8072"))
+barplot(plot_data,col = c("#ffff99","#fb8072"),width = 1)
 ```
 
-#### IBD
-```{r}
+### IBD
+```{r echo=FALSE, message=FALSE, results='hide', warning=FALSE}
 finemap_res <- readRDS("/project/xinhe/xsun/multi_group_ctwas/11.multi_group_1008/results/IBD-ebi-a-GCST004131/IBD-ebi-a-GCST004131.ctwas.res.RDS")
 z_gene <- finemap_res$z_gene
 finemap_res <- finemap_res$finemap_res
@@ -137,7 +137,7 @@ num_ctwas <- dim(finemap_res[(finemap_res$susie_pip>0.8) & (finemap_res$type!="S
 num_coloc <- length(coloc_genes)
 plot_data <- c(num_coloc,num_ctwas)
 names(plot_data) <- c("coloc","multi-cTWAS")
-barplot(plot_data,col = c("#ffff99","#fb8072"))
+barplot(plot_data,col = c("#ffff99","#fb8072"),width = 1)
 ```
 
 
