--- a/analysis/tissue_selection_extra_tissue.Rmd
+++ b/analysis/tissue_selection_extra_tissue.Rmd
@@ -14,8 +14,9 @@ output:
 - Take the rest of tissues with sample size >=200, one at a time, as extra tissue and run multi-tissue eQTL ctwas. 
 - Evaluate the percent of h2g in the extra tissue, conditioned on the known ones. 
 
-```{r}
+```{r message=F, warning=F}
 library(ctwas)
+library(dplyr)
 
 load("/project2/xinhe/shared_data/multigroup_ctwas/gwas/samplesize.rdata")
 
@@ -23,7 +24,9 @@ load("/project2/xinhe/shared_data/multigroup_ctwas/gwas/samplesize.rdata")
 
 # IBD-ebi-a-GCST004131
 
-```{r}
+## Round 1 -- baseline_tissue : Whole_Blood,Colon_Sigmoid,Colon_Transverse
+
+```{r message=F, warning=F}
 
 trait <- "IBD-ebi-a-GCST004131"
 baseline_tissue <- c("Whole_Blood","Colon_Sigmoid","Colon_Transverse")
@@ -47,28 +50,246 @@ for (tissue in c("baseline",extra_tissue)) {
   if(tissue == "baseline") {
     
     total_pve <- ctwas_parameters$total_pve
+    
+    total_nonSNP_prob_h2g_baseline <- (1- ctwas_parameters$prop_heritability["SNP"])*100
+    
     prob_h2g <- round(as.numeric(ctwas_parameters$prop_heritability[paste0(c(baseline_tissue),"|eQTL")]*100),digits = 4)
-    prob_h2g <- c(prob_h2g,NA)
+    
+    h2g_v_tissue <- c(tissue, total_nonSNP_prob_h2g_baseline,NA,prob_h2g,total_pve,NA)
   }else {
     total_pve <- ctwas_parameters$total_pve
+    
+    total_nonSNP_prob_h2g <- (1- ctwas_parameters$prop_heritability["SNP"])*100
+    nonSNP_prob_h2g_gain <- total_nonSNP_prob_h2g - total_nonSNP_prob_h2g_baseline
+    
+    
     prob_h2g <- round(as.numeric(ctwas_parameters$prop_heritability[paste0(c(baseline_tissue,tissue),"|eQTL")]*100),digits = 4)
+    
+    h2g_v_tissue <- c(tissue, total_nonSNP_prob_h2g,nonSNP_prob_h2g_gain,prob_h2g,total_pve,NA)
+    
   }
   
-  all <- rbind(all,c(tissue,total_pve,prob_h2g))
+  all <- rbind(all,h2g_v_tissue)
   
 }
 
 
-colnames(all) <- c("extra_tissue","total_pve",paste0("%h2g_",c(baseline_tissue)),"%h2g_extra_tissue")
+colnames(all) <- c("extra_tissue","total_nonSNP_prob_h2g(%)","nonSNP_prob_h2g_gain(%)",paste0("%h2g_",c(baseline_tissue)),"%h2g_extra_tissue","pve_gain")
 all <- as.data.frame(all)
 
-all$total_pve <- round(as.numeric(all$total_pve),digits = 4)
-baseline_pve <- all$total_pve[all$extra_tissue == "baseline"]
-all$pve_gain <- round(as.numeric(all$total_pve - baseline_pve),digits = 4)
+all <- all %>%
+  dplyr::mutate(across(where(is.character), ~ as.numeric(.x))) %>%  # Convert character columns to numeric
+  dplyr::mutate(across(where(is.numeric), ~ round(.x, digits = 4))) # Round numeric columns
 
-all$pve_gain[all$extra_tissue == "baseline"] <- NA
+all$extra_tissue <- c("baseline",extra_tissue)
+rownames(all) <- seq(1:nrow(all))
 
-DT::datatable(all,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','PVE change for adding extra tissue'),options = list(pageLength = 10) )
+DT::datatable(all,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','PVE change after adding extra tissue'),options = list(pageLength = 10) )
+```
+
+
+
+
+
+
+
+
+## Round 2 -- baseline_tissue : Whole_Blood,Colon_Sigmoid,Colon_Transverse,Artery_Coronary
+
+```{r message=F, warning=F}
+
+trait <- "IBD-ebi-a-GCST004131"
+baseline_tissue <- c("Whole_Blood","Colon_Sigmoid","Colon_Transverse","Artery_Coronary")
+
+gwas_n <- samplesize[trait]
+
+result_dir <- paste0("/project/xinhe/xsun/multi_group_ctwas/12.tissue_selection/results/", trait,"_round2", "/")
+
+extra_tissue <- list.files(path = result_dir)
+extra_tissue <- extra_tissue[-which(extra_tissue == "baseline")]
+
+all <- c()
+for (tissue in c("baseline",extra_tissue)) {
+  
+  para_file <- paste0(result_dir,tissue,"/",trait,"_",tissue,".param.RDS")
+  param <- readRDS(para_file)
+  
+  ctwas_parameters <- summarize_param(param, gwas_n)
+  
+  if(tissue == "baseline") {
+    
+    total_pve <- ctwas_parameters$total_pve
+    
+    total_nonSNP_prob_h2g_baseline <- (1- ctwas_parameters$prop_heritability["SNP"])*100
+    
+    prob_h2g <- round(as.numeric(ctwas_parameters$prop_heritability[paste0(c(baseline_tissue),"|eQTL")]*100),digits = 4)
+    
+    h2g_v_tissue <- c(tissue, total_nonSNP_prob_h2g_baseline,NA,prob_h2g,total_pve,NA)
+  }else {
+    total_pve <- ctwas_parameters$total_pve
+    
+    total_nonSNP_prob_h2g <- (1- ctwas_parameters$prop_heritability["SNP"])*100
+    nonSNP_prob_h2g_gain <- total_nonSNP_prob_h2g - total_nonSNP_prob_h2g_baseline
+    
+    
+    prob_h2g <- round(as.numeric(ctwas_parameters$prop_heritability[paste0(c(baseline_tissue,tissue),"|eQTL")]*100),digits = 4)
+    
+    h2g_v_tissue <- c(tissue, total_nonSNP_prob_h2g,nonSNP_prob_h2g_gain,prob_h2g,total_pve,NA)
+    
+  }
+  
+  all <- rbind(all,h2g_v_tissue)
+  
+}
+
+
+colnames(all) <- c("extra_tissue","total_nonSNP_prob_h2g(%)","nonSNP_prob_h2g_gain(%)",paste0("%h2g_",c(baseline_tissue)),"%h2g_extra_tissue","pve_gain")
+all <- as.data.frame(all)
+
+all <- all %>%
+  dplyr::mutate(across(where(is.character), ~ as.numeric(.x))) %>%  # Convert character columns to numeric
+  dplyr::mutate(across(where(is.numeric), ~ round(.x, digits = 4))) # Round numeric columns
+
+all$extra_tissue <- c("baseline",extra_tissue)
+rownames(all) <- seq(1:nrow(all))
+
+DT::datatable(all,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','PVE change after adding extra tissue'),options = list(pageLength = 10) )
+```
+
+
+
+
+
+
+
+## Round 3 -- baseline_tissue : Whole_Blood,Colon_Sigmoid,Colon_Transverse,Artery_Coronary,Heart_Left_Ventricle
+
+```{r message=F, warning=F}
+
+trait <- "IBD-ebi-a-GCST004131"
+baseline_tissue <- c("Whole_Blood","Colon_Sigmoid","Colon_Transverse","Artery_Coronary","Heart_Left_Ventricle")
+
+gwas_n <- samplesize[trait]
+
+result_dir <- paste0("/project/xinhe/xsun/multi_group_ctwas/12.tissue_selection/results/", trait,"_round3", "/")
+
+extra_tissue <- list.files(path = result_dir)
+extra_tissue <- extra_tissue[-which(extra_tissue == "baseline")]
+
+all <- c()
+for (tissue in c("baseline",extra_tissue)) {
+  
+  para_file <- paste0(result_dir,tissue,"/",trait,"_",tissue,".param.RDS")
+  param <- readRDS(para_file)
+  
+  ctwas_parameters <- summarize_param(param, gwas_n)
+  
+  if(tissue == "baseline") {
+    
+    total_pve <- ctwas_parameters$total_pve
+    
+    total_nonSNP_prob_h2g_baseline <- (1- ctwas_parameters$prop_heritability["SNP"])*100
+    
+    prob_h2g <- round(as.numeric(ctwas_parameters$prop_heritability[paste0(c(baseline_tissue),"|eQTL")]*100),digits = 4)
+    
+    h2g_v_tissue <- c(tissue, total_nonSNP_prob_h2g_baseline,NA,prob_h2g,total_pve,NA)
+  }else {
+    total_pve <- ctwas_parameters$total_pve
+    
+    total_nonSNP_prob_h2g <- (1- ctwas_parameters$prop_heritability["SNP"])*100
+    nonSNP_prob_h2g_gain <- total_nonSNP_prob_h2g - total_nonSNP_prob_h2g_baseline
+    
+    
+    prob_h2g <- round(as.numeric(ctwas_parameters$prop_heritability[paste0(c(baseline_tissue,tissue),"|eQTL")]*100),digits = 4)
+    
+    h2g_v_tissue <- c(tissue, total_nonSNP_prob_h2g,nonSNP_prob_h2g_gain,prob_h2g,total_pve,NA)
+    
+  }
+  
+  all <- rbind(all,h2g_v_tissue)
+  
+}
+
+
+colnames(all) <- c("extra_tissue","total_nonSNP_prob_h2g(%)","nonSNP_prob_h2g_gain(%)",paste0("%h2g_",c(baseline_tissue)),"%h2g_extra_tissue","pve_gain")
+all <- as.data.frame(all)
+
+all <- all %>%
+  dplyr::mutate(across(where(is.character), ~ as.numeric(.x))) %>%  # Convert character columns to numeric
+  dplyr::mutate(across(where(is.numeric), ~ round(.x, digits = 4))) # Round numeric columns
+
+all$extra_tissue <- c("baseline",extra_tissue)
+rownames(all) <- seq(1:nrow(all))
+
+DT::datatable(all,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','PVE change after adding extra tissue'),options = list(pageLength = 10) )
+```
+
+
+
+
+
+
+
+## Round 4 -- baseline_tissue : Whole_Blood,Colon_Sigmoid,Colon_Transverse,Artery_Coronary,Heart_Left_Ventricle,Cells_Cultured_fibroblasts
+
+```{r message=F, warning=F}
+
+trait <- "IBD-ebi-a-GCST004131"
+baseline_tissue <- c("Whole_Blood","Colon_Sigmoid","Colon_Transverse","Artery_Coronary","Heart_Left_Ventricle","Cells_Cultured_fibroblasts")
+
+gwas_n <- samplesize[trait]
+
+result_dir <- paste0("/project/xinhe/xsun/multi_group_ctwas/12.tissue_selection/results/", trait,"_round4", "/")
+
+extra_tissue <- list.files(path = result_dir)
+extra_tissue <- extra_tissue[-which(extra_tissue == "baseline")]
+
+all <- c()
+for (tissue in c("baseline",extra_tissue)) {
+  
+  para_file <- paste0(result_dir,tissue,"/",trait,"_",tissue,".param.RDS")
+  param <- readRDS(para_file)
+  
+  ctwas_parameters <- summarize_param(param, gwas_n)
+  
+  if(tissue == "baseline") {
+    
+    total_pve <- ctwas_parameters$total_pve
+    
+    total_nonSNP_prob_h2g_baseline <- (1- ctwas_parameters$prop_heritability["SNP"])*100
+    
+    prob_h2g <- round(as.numeric(ctwas_parameters$prop_heritability[paste0(c(baseline_tissue),"|eQTL")]*100),digits = 4)
+    
+    h2g_v_tissue <- c(tissue, total_nonSNP_prob_h2g_baseline,NA,prob_h2g,total_pve,NA)
+  }else {
+    total_pve <- ctwas_parameters$total_pve
+    
+    total_nonSNP_prob_h2g <- (1- ctwas_parameters$prop_heritability["SNP"])*100
+    nonSNP_prob_h2g_gain <- total_nonSNP_prob_h2g - total_nonSNP_prob_h2g_baseline
+    
+    
+    prob_h2g <- round(as.numeric(ctwas_parameters$prop_heritability[paste0(c(baseline_tissue,tissue),"|eQTL")]*100),digits = 4)
+    
+    h2g_v_tissue <- c(tissue, total_nonSNP_prob_h2g,nonSNP_prob_h2g_gain,prob_h2g,total_pve,NA)
+    
+  }
+  
+  all <- rbind(all,h2g_v_tissue)
+  
+}
+
+
+colnames(all) <- c("extra_tissue","total_nonSNP_prob_h2g(%)","nonSNP_prob_h2g_gain(%)",paste0("%h2g_",c(baseline_tissue)),"%h2g_extra_tissue","pve_gain")
+all <- as.data.frame(all)
+
+all <- all %>%
+  dplyr::mutate(across(where(is.character), ~ as.numeric(.x))) %>%  # Convert character columns to numeric
+  dplyr::mutate(across(where(is.numeric), ~ round(.x, digits = 4))) # Round numeric columns
+
+all$extra_tissue <- c("baseline",extra_tissue)
+rownames(all) <- seq(1:nrow(all))
+
+DT::datatable(all,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','PVE change after adding extra tissue'),options = list(pageLength = 10) )
 ```
 
 
