--- a/analysis/tissue_selection_extra_tissue.Rmd
+++ b/analysis/tissue_selection_extra_tissue.Rmd
@@ -296,3 +296,285 @@ DT::datatable(all,caption = htmltools::tags$caption( style = 'caption-side: left
 
 
 
+
+
+
+# SBP-ukb-a-360
+
+## Round 1 -- baseline_tissue : Artery_Aorta,Heart_Left_Ventricle,Adrenal_Gland
+
+```{r message=F, warning=F}
+
+trait <- "SBP-ukb-a-360"
+baseline_tissue <- c("Artery_Aorta", "Heart_Left_Ventricle", "Adrenal_Gland")
+
+
+gwas_n <- samplesize[trait]
+
+result_dir <- paste0("/project/xinhe/xsun/multi_group_ctwas/12.tissue_selection/results/", trait, "/")
+
+extra_tissue <- list.files(path = result_dir)
+extra_tissue <- extra_tissue[-which(extra_tissue == "baseline")]
+
+all <- c()
+for (tissue in c("baseline",extra_tissue)) {
+  
+  para_file <- paste0(result_dir,tissue,"/",trait,"_",tissue,".param.RDS")
+  param <- readRDS(para_file)
+  
+  ctwas_parameters <- summarize_param(param, gwas_n)
+  
+  if(tissue == "baseline") {
+    
+    total_pve <- ctwas_parameters$total_pve
+    
+    total_nonSNP_prob_h2g_baseline <- (1- ctwas_parameters$prop_heritability["SNP"])*100
+    
+    prob_h2g <- round(as.numeric(ctwas_parameters$prop_heritability[paste0(c(baseline_tissue),"|eQTL")]*100),digits = 4)
+    
+    h2g_v_tissue <- c(tissue, total_nonSNP_prob_h2g_baseline,NA,prob_h2g,total_pve,NA)
+  }else {
+    total_pve <- ctwas_parameters$total_pve
+    
+    total_nonSNP_prob_h2g <- (1- ctwas_parameters$prop_heritability["SNP"])*100
+    nonSNP_prob_h2g_gain <- total_nonSNP_prob_h2g - total_nonSNP_prob_h2g_baseline
+    
+    
+    prob_h2g <- round(as.numeric(ctwas_parameters$prop_heritability[paste0(c(baseline_tissue,tissue),"|eQTL")]*100),digits = 4)
+    
+    h2g_v_tissue <- c(tissue, total_nonSNP_prob_h2g,nonSNP_prob_h2g_gain,prob_h2g,total_pve,NA)
+    
+  }
+  
+  all <- rbind(all,h2g_v_tissue)
+  
+}
+
+
+colnames(all) <- c("extra_tissue","total_nonSNP_prob_h2g(%)","nonSNP_prob_h2g_gain(%)",paste0("%h2g_",c(baseline_tissue)),"%h2g_extra_tissue","pve_gain")
+all <- as.data.frame(all)
+
+all <- all %>%
+  dplyr::mutate(across(where(is.character), ~ as.numeric(.x))) %>%  # Convert character columns to numeric
+  dplyr::mutate(across(where(is.numeric), ~ round(.x, digits = 4))) # Round numeric columns
+
+all$extra_tissue <- c("baseline",extra_tissue)
+rownames(all) <- seq(1:nrow(all))
+
+DT::datatable(all,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','PVE change after adding extra tissue'),options = list(pageLength = 10) )
+```
+
+
+
+
+
+
+
+
+## Round 2 -- baseline_tissue : Artery_Aorta,Heart_Left_Ventricle,Adrenal_Gland,Brain_Cortex
+
+```{r message=F, warning=F}
+
+baseline_tissue <- c("Artery_Aorta", "Heart_Left_Ventricle", "Adrenal_Gland","Brain_Cortex")
+
+gwas_n <- samplesize[trait]
+
+result_dir <- paste0("/project/xinhe/xsun/multi_group_ctwas/12.tissue_selection/results/", trait,"_round2", "/")
+
+extra_tissue <- list.files(path = result_dir)
+extra_tissue <- extra_tissue[-which(extra_tissue == "baseline")]
+
+all <- c()
+for (tissue in c("baseline",extra_tissue)) {
+  
+  para_file <- paste0(result_dir,tissue,"/",trait,"_",tissue,".param.RDS")
+  param <- readRDS(para_file)
+  
+  ctwas_parameters <- summarize_param(param, gwas_n)
+  
+  if(tissue == "baseline") {
+    
+    total_pve <- ctwas_parameters$total_pve
+    
+    total_nonSNP_prob_h2g_baseline <- (1- ctwas_parameters$prop_heritability["SNP"])*100
+    
+    prob_h2g <- round(as.numeric(ctwas_parameters$prop_heritability[paste0(c(baseline_tissue),"|eQTL")]*100),digits = 4)
+    
+    h2g_v_tissue <- c(tissue, total_nonSNP_prob_h2g_baseline,NA,prob_h2g,total_pve,NA)
+  }else {
+    total_pve <- ctwas_parameters$total_pve
+    
+    total_nonSNP_prob_h2g <- (1- ctwas_parameters$prop_heritability["SNP"])*100
+    nonSNP_prob_h2g_gain <- total_nonSNP_prob_h2g - total_nonSNP_prob_h2g_baseline
+    
+    
+    prob_h2g <- round(as.numeric(ctwas_parameters$prop_heritability[paste0(c(baseline_tissue,tissue),"|eQTL")]*100),digits = 4)
+    
+    h2g_v_tissue <- c(tissue, total_nonSNP_prob_h2g,nonSNP_prob_h2g_gain,prob_h2g,total_pve,NA)
+    
+  }
+  
+  all <- rbind(all,h2g_v_tissue)
+  
+}
+
+
+colnames(all) <- c("extra_tissue","total_nonSNP_prob_h2g(%)","nonSNP_prob_h2g_gain(%)",paste0("%h2g_",c(baseline_tissue)),"%h2g_extra_tissue","pve_gain")
+all <- as.data.frame(all)
+
+all <- all %>%
+  dplyr::mutate(across(where(is.character), ~ as.numeric(.x))) %>%  # Convert character columns to numeric
+  dplyr::mutate(across(where(is.numeric), ~ round(.x, digits = 4))) # Round numeric columns
+
+all$extra_tissue <- c("baseline",extra_tissue)
+rownames(all) <- seq(1:nrow(all))
+
+DT::datatable(all,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','PVE change after adding extra tissue'),options = list(pageLength = 10) )
+```
+
+
+
+
+
+
+
+
+
+# SBP-ukb-a-360 -- another baseline selection
+
+## Round 1 -- baseline_tissue : Artery_Aorta,Artery_Tibial,Adrenal_Gland
+
+```{r message=F, warning=F}
+
+trait <- "SBP-ukb-a-360"
+baseline_tissue <- c("Artery_Aorta", "Artery_Tibial", "Adrenal_Gland")
+
+
+gwas_n <- samplesize[trait]
+
+result_dir <- paste0("/project/xinhe/xsun/multi_group_ctwas/12.tissue_selection/results/", trait, "_base2/")
+
+extra_tissue <- list.files(path = result_dir)
+extra_tissue <- extra_tissue[-which(extra_tissue == "baseline")]
+
+all <- c()
+for (tissue in c("baseline",extra_tissue)) {
+  
+  para_file <- paste0(result_dir,tissue,"/",trait,"_",tissue,".param.RDS")
+  param <- readRDS(para_file)
+  
+  ctwas_parameters <- summarize_param(param, gwas_n)
+  
+  if(tissue == "baseline") {
+    
+    total_pve <- ctwas_parameters$total_pve
+    
+    total_nonSNP_prob_h2g_baseline <- (1- ctwas_parameters$prop_heritability["SNP"])*100
+    
+    prob_h2g <- round(as.numeric(ctwas_parameters$prop_heritability[paste0(c(baseline_tissue),"|eQTL")]*100),digits = 4)
+    
+    h2g_v_tissue <- c(tissue, total_nonSNP_prob_h2g_baseline,NA,prob_h2g,total_pve,NA)
+  }else {
+    total_pve <- ctwas_parameters$total_pve
+    
+    total_nonSNP_prob_h2g <- (1- ctwas_parameters$prop_heritability["SNP"])*100
+    nonSNP_prob_h2g_gain <- total_nonSNP_prob_h2g - total_nonSNP_prob_h2g_baseline
+    
+    
+    prob_h2g <- round(as.numeric(ctwas_parameters$prop_heritability[paste0(c(baseline_tissue,tissue),"|eQTL")]*100),digits = 4)
+    
+    h2g_v_tissue <- c(tissue, total_nonSNP_prob_h2g,nonSNP_prob_h2g_gain,prob_h2g,total_pve,NA)
+    
+  }
+  
+  all <- rbind(all,h2g_v_tissue)
+  
+}
+
+
+colnames(all) <- c("extra_tissue","total_nonSNP_prob_h2g(%)","nonSNP_prob_h2g_gain(%)",paste0("%h2g_",c(baseline_tissue)),"%h2g_extra_tissue","pve_gain")
+all <- as.data.frame(all)
+
+all <- all %>%
+  dplyr::mutate(across(where(is.character), ~ as.numeric(.x))) %>%  # Convert character columns to numeric
+  dplyr::mutate(across(where(is.numeric), ~ round(.x, digits = 4))) # Round numeric columns
+
+all$extra_tissue <- c("baseline",extra_tissue)
+rownames(all) <- seq(1:nrow(all))
+
+DT::datatable(all,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','PVE change after adding extra tissue'),options = list(pageLength = 10) )
+```
+
+
+
+
+
+
+
+
+## Round 2 -- baseline_tissue : Artery_Aorta,Heart_Left_Ventricle,Adrenal_Gland,Brain_Cortex
+
+```{r message=F, warning=F}
+
+baseline_tissue <- c("Artery_Aorta", "Heart_Left_Ventricle", "Adrenal_Gland","Brain_Cortex")
+
+gwas_n <- samplesize[trait]
+
+result_dir <- paste0("/project/xinhe/xsun/multi_group_ctwas/12.tissue_selection/results/", trait,"_round2", "/")
+
+extra_tissue <- list.files(path = result_dir)
+extra_tissue <- extra_tissue[-which(extra_tissue == "baseline")]
+
+all <- c()
+for (tissue in c("baseline",extra_tissue)) {
+  
+  para_file <- paste0(result_dir,tissue,"/",trait,"_",tissue,".param.RDS")
+  param <- readRDS(para_file)
+  
+  ctwas_parameters <- summarize_param(param, gwas_n)
+  
+  if(tissue == "baseline") {
+    
+    total_pve <- ctwas_parameters$total_pve
+    
+    total_nonSNP_prob_h2g_baseline <- (1- ctwas_parameters$prop_heritability["SNP"])*100
+    
+    prob_h2g <- round(as.numeric(ctwas_parameters$prop_heritability[paste0(c(baseline_tissue),"|eQTL")]*100),digits = 4)
+    
+    h2g_v_tissue <- c(tissue, total_nonSNP_prob_h2g_baseline,NA,prob_h2g,total_pve,NA)
+  }else {
+    total_pve <- ctwas_parameters$total_pve
+    
+    total_nonSNP_prob_h2g <- (1- ctwas_parameters$prop_heritability["SNP"])*100
+    nonSNP_prob_h2g_gain <- total_nonSNP_prob_h2g - total_nonSNP_prob_h2g_baseline
+    
+    
+    prob_h2g <- round(as.numeric(ctwas_parameters$prop_heritability[paste0(c(baseline_tissue,tissue),"|eQTL")]*100),digits = 4)
+    
+    h2g_v_tissue <- c(tissue, total_nonSNP_prob_h2g,nonSNP_prob_h2g_gain,prob_h2g,total_pve,NA)
+    
+  }
+  
+  all <- rbind(all,h2g_v_tissue)
+  
+}
+
+
+colnames(all) <- c("extra_tissue","total_nonSNP_prob_h2g(%)","nonSNP_prob_h2g_gain(%)",paste0("%h2g_",c(baseline_tissue)),"%h2g_extra_tissue","pve_gain")
+all <- as.data.frame(all)
+
+all <- all %>%
+  dplyr::mutate(across(where(is.character), ~ as.numeric(.x))) %>%  # Convert character columns to numeric
+  dplyr::mutate(across(where(is.numeric), ~ round(.x, digits = 4))) # Round numeric columns
+
+all$extra_tissue <- c("baseline",extra_tissue)
+rownames(all) <- seq(1:nrow(all))
+
+DT::datatable(all,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','PVE change after adding extra tissue'),options = list(pageLength = 10) )
+```
+
+
+
+
+
+
