--- a/analysis/tissue_selection_extra_tissue.Rmd
+++ b/analysis/tissue_selection_extra_tissue.Rmd
@@ -520,7 +520,7 @@ baseline_tissue <- c("Artery_Aorta", "Heart_Left_Ventricle", "Adrenal_Gland","Br
 
 gwas_n <- samplesize[trait]
 
-result_dir <- paste0("/project/xinhe/xsun/multi_group_ctwas/12.tissue_selection/results/", trait,"_round2", "/")
+result_dir <- paste0("/project/xinhe/xsun/multi_group_ctwas/12.tissue_selection/results/", trait, "_base2_round2", "/")
 
 extra_tissue <- list.files(path = result_dir)
 extra_tissue <- extra_tissue[-which(extra_tissue == "baseline")]
