--- a/analysis/real_data_all_tissues.Rmd
+++ b/analysis/real_data_all_tissues.Rmd
@@ -17,7 +17,7 @@ editor_options:
 4. For WBC, whole blood has much higher %h2g than other tissues. 
 5. For SCZ, the top ones are basal ganglia, cerebellum, hippocampus, hemisphere, cortex ...
 
-#### IBD results
+### IBD results
 ```{r, echo=FALSE, fig.width=10, fig.height=8}
 ctwas_parameters <- readRDS("/project/xinhe/shengqian/cTWAS_analysis/data/ibd_all_tissue_E/ibd_all_tissue_E.ctwas_parameters.RDS")
 prop_h2g <- as.data.frame(cbind(names(ctwas_parameters$prop_heritability),ctwas_parameters$prop_heritability))
@@ -28,7 +28,7 @@ colnames(prop_h2g) <- c("group","%h2g")
 DT::datatable(prop_h2g,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;','Proportion of PVE'),options = list(pageLength = 10) )
 ```
 
-#### LDL results
+### LDL results
 ```{r, echo=FALSE, fig.width=10, fig.height=8}
 ctwas_parameters <- readRDS("/project/xinhe/shengqian/cTWAS_analysis/data/ldl_all_tissue_E/ldl_all_tissue_E.ctwas_parameters.RDS")
 prop_h2g <- as.data.frame(cbind(names(ctwas_parameters$prop_heritability),ctwas_parameters$prop_heritability))
@@ -38,7 +38,7 @@ prop_h2g <- prop_h2g[order(-prop_h2g$V2),]
 DT::datatable(prop_h2g,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;','Proportion of PVE'),options = list(pageLength = 10) )
 ```
 
-#### SBP results
+### SBP results
 ```{r, echo=FALSE, fig.width=10, fig.height=8}
 ctwas_parameters <- readRDS("/project/xinhe/shengqian/cTWAS_analysis/data/sbp_all_tissue_E/sbp_all_tissue_E.ctwas_parameters.RDS")
 prop_h2g <- as.data.frame(cbind(names(ctwas_parameters$prop_heritability),ctwas_parameters$prop_heritability))
@@ -49,7 +49,7 @@ colnames(prop_h2g) <- c("group","%h2g")
 DT::datatable(prop_h2g,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;','Proportion of PVE'),options = list(pageLength = 10) )
 ```
 
-#### WBC results
+### WBC results
 ```{r, echo=FALSE, fig.width=10, fig.height=8}
 ctwas_parameters <- readRDS("/project/xinhe/shengqian/cTWAS_analysis/data/wbc_all_tissue_E/wbc_all_tissue_E.ctwas_parameters.RDS")
 prop_h2g <- as.data.frame(cbind(names(ctwas_parameters$prop_heritability),ctwas_parameters$prop_heritability))
@@ -61,7 +61,7 @@ DT::datatable(prop_h2g,caption = htmltools::tags$caption( style = 'caption-side:
 ```
 
 
-#### SCZ results
+### SCZ results
 ```{r, echo=FALSE, fig.width=10, fig.height=8}
 ctwas_parameters <- readRDS("/project/xinhe/shengqian/cTWAS_analysis/data/scz_all_tissue_E/scz_all_tissue_E.ctwas_parameters.RDS")
 prop_h2g <- as.data.frame(cbind(names(ctwas_parameters$prop_heritability),ctwas_parameters$prop_heritability))
