--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -75,6 +75,12 @@ Package V1.0
   
 Package V2.0
 
+
+## Comparing with other studies
+
+* [coloc results](real_data_coloc.html)
+
+
 # Multi omics and multi tissues analysis
 
   package v1.0
