--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -76,12 +76,7 @@ Package V1.0
 Package V2.0
 
 
-## Comparing with other studies
-
-* [coloc results](real_data_coloc.html)
-
-
-# Multi omics and multi tissues analysis
+## Multi omics and multi tissues analysis
 
   package v1.0
 
@@ -100,6 +95,10 @@ Package V2.0
   * [Enrichment analysis for 6 Traits, 5 tissues, eQTL + sQTL + stQTL -- compute ukbb LD, eqtl, sqtl from predictdb; stQTL from Munro et al; post-processing undo](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_6traits_15weights_ess_enrichment_genesymbol.html)
   * [Summary for 6 Traits, 5 tissues, eQTL + sQTL + stQTL -- compute ukbb LD, eqtl, sqtl from predictdb; stQTL from Munro et al](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_6traits_15weights_ess_summary.html)
   
+## Comparing with other methods
+
+* [coloc results](real_data_coloc.html)
+
 
 # Post - processing
 
